@@ -2017,7 +2017,8 @@ to a previously blocked IP address or username.',
 'anononlyblock' => 'anon. only',
 'noautoblockblock' => 'autoblock disabled',
 'createaccountblock' => 'account creation blocked',
-'ipblocklistempty'	=> 'The blocklist is empty or the requested IP address/username is not blocked.',
+'ipblocklist-empty'	=> 'The blocklist is empty.',
+'ipblocklist-no-results'	=> 'The requested IP address or username is not blocked.',
 'blocklink'		=> 'block',
 'unblocklink'	=> 'unblock',
 'contribslink'	=> 'contribs',
